# KVSTORE

kv/: README.md  docker-compose.yml
kv/backend/: Dockerfile  __init__.py  database.py  keyValueStorage.db  main.py  model.py  pydanticModel.py  pyproject.toml
kv/frontend/: Dockerfile  package-lock.json  package.json
kv/frontend/src/: App.jsx
