[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mukees", email = "mukees.khan@cloudmizan.com" }
]
dependencies = [
    "fastapi>=0.111.1",
    "black>=24.4.2",
    "uvicorn>=0.30.1",
    "sqlalchemy>=2.0.31",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
